--- a/src/assets/stylesheets/general.scss
+++ b/src/assets/stylesheets/general.scss
@@ -1,4 +1,3 @@
-@import '/src/assets/stylesheets/general.scss';
 @import '/src/assets/stylesheets/mixins.scss';
 @import '/src/assets/stylesheets/variables.scss';
 
@@ -15,11 +14,10 @@ html {
 body {
   font-size: 1.8rem;
   font-family: 'Open Sans', sans-serif;
-  background-color: $black-color;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: $white-color;
+  color: $black-color;
 }
 
 .wrapper {
