--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -6,12 +6,39 @@
 
 .header {
   min-height: 100vh;
-}
+  @include flex(flex, row, nowrap, space-between, center);
 
-.images {
-  width: 100%;
+  &__left {
+    width: 20%;
+    z-index: 9999;
+  }
 
-  &__div {
-    width: fit-content;
+  &__title {
+    font-size: 10rem;
+    text-transform: uppercase;
+    margin-bottom: 3rem
+  }
+
+  &__btn {
+    @include btn-border($white-color, $black-color);
+    font-size: 2.4rem;
+
+    &:hover {
+      @include btn($black-color, $white-color);
+      font-size: 2.4rem;
+    }
+  }
+
+  &__center {
+    width: 60%;
+    z-index: 0;
+  }
+
+  &__right {
+    width: 20%;
+  }
+
+  &__subtitle {
+    font-size: 2.5rem;
   }
 }
