--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -3,3 +3,7 @@ $primary-color: #e50914;
 $white-color: #fff;
 $grey-color: #303030;
 $black-color: #000000;
+
+
+/* FONTS */
+$primary-font: 'DM Sans', sans-serif;
