--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,13 +1,18 @@
 @import '/src/assets/stylesheets/general.scss';
 
-.product-card {
+.products-card {
 
-  &__info {
-    width: 22%;
-    margin: 0 1.5%;
+  &__single {
+    width: 23%;
+    margin: 1.1rem 1.1rem;
+    padding: 1rem 1rem;
+    min-height: 400px;
+    box-shadow: 0px 4px 10px rgba(123, 123, 123, 0.15)
   }
 
   &__image {
+    height: 250px;
     width: 100%;
+    object-fit: contain;
   }
 }
