--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -3,16 +3,29 @@
 .products-card {
 
   &__single {
-    width: 23%;
-    margin: 1.1rem 1.1rem;
-    padding: 1rem 1rem;
-    min-height: 400px;
-    box-shadow: 0px 4px 10px rgba(123, 123, 123, 0.15)
+    padding: 2rem 1rem;
+    box-shadow: 0px 0px 7px rgba(123, 123, 123, 0.15);
+
+    &:first-child {
+      grid-row: 1/3;
+      grid-template-rows: 800px;
+      @include flex(flex, column, wrap, center, center);
+    }
+
+    &::nth-of-type(n+1) {
+      grid-row: 1/1;
+      grid-column: 1/2;
+      grid-template-rows: 400px;
+    }
   }
 
   &__image {
     height: 250px;
     width: 100%;
     object-fit: contain;
+
+    &--first {
+      height: 450px;
+    }
   }
 }
